--- a/BbxFromPoints2/Resources/UI/BbxFromPoints2.ui
+++ b/BbxFromPoints2/Resources/UI/BbxFromPoints2.ui
@@ -88,7 +88,7 @@
       <item>
        <widget class="QPushButton" name="clearPtsButton">
         <property name="text">
-         <string>Clear Selected Points</string>
+         <string>Clear All Selected Points</string>
         </property>
        </widget>
       </item>
