--- a/BbxFromPoints2/Resources/UI/BbxFromPoints2.ui
+++ b/BbxFromPoints2/Resources/UI/BbxFromPoints2.ui
@@ -18,6 +18,16 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
+       <widget class="QLabel" name="subjectLabel">
+        <property name="text">
+         <string>Current suject: </string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="selectDirectoryButton">
         <property name="text">
          <string>Select Scan Directory</string>
